Done adding firebase and add some changes

--- a/src/pages/Password/Password.css
+++ b/src/pages/Password/Password.css
@@ -6,12 +6,16 @@
   width: 10vw;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 428px) {
   .password {
     width: 70vw;
   }
 
   .password button {
     width: 70vw;
+  }
+
+  .back {
+    width: 20vw;
   }
 }
